feat: add onlyMod and config

--- a/config.sample.json
+++ b/config.sample.json
@@ -1,5 +1,6 @@
 {
     "token": "discord bot token",
     "prefix": "/",
-    "simsimi": "simsimi api key"
+    "simsimi": "simsimi api key",
+    "maxRequestPerUser": 100
 }
